[RISCV64] Fix RISCV64Assembler::ImmediateDecomposition in debug builds https://bugs.webkit.org/show_bug.cgi?id=234594

Unreviewed, fix the RISCV64Assembler::ImmediateDecomposition constructor
to build in debug mode (fixing the assert) as well as run properly in
that mode (performing manual sign-extension on the lower 12 bits of the
IImmediate value as required for this type of immediates).

Patch by Zan Dobersek <zdobersek@igalia.com> on 2021-12-22

* assembler/RISCV64Assembler.h:
(JSC::RISCV64Instructions::ImmediateDecomposition::ImmediateDecomposition):


Canonical link: https://commits.webkit.org/245494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287352 268f45cc-cd09-0410-ab3c-d52691b4dbfc